--- a/week1/project/ecommerce/src/index.css
+++ b/week1/project/ecommerce/src/index.css
@@ -107,3 +107,11 @@ ul {
   margin-inline-end: 0px;
   padding-inline-start: 40px;
 }
+a:-webkit-any-link {
+  color: -webkit-link;
+  cursor: pointer;
+  text-decoration: underline;
+}
+a {
+  background-color: transparent;
+}
