--- a/week1/project/ecommerce/src/index.css
+++ b/week1/project/ecommerce/src/index.css
@@ -39,13 +39,16 @@ h1 {
  }
 .categories {
   display: flex;
+  
 }
 .categories--item {
+  
   background-color: #efeff0;
   cursor: pointer;
   font-weight: 700;
   margin: 2px;
   padding: 12px;
+ 
 }
 body {
   -webkit-font-smoothing: antialiased;
@@ -63,12 +66,15 @@ html {
   background-color: #d6d6d8;
 }
 .product--image {
+  
   margin-bottom: auto;
   margin-top: auto;
   max-height: 300px;
   object-fit: contain;
   width: 100%;
 }
+.product--image--container
+{position: relative;}
 img {
   border-style: none;
 }
@@ -87,6 +93,7 @@ img {
   -webkit-margin-after: 0;
   -webkit-padding-start: 0;
   display: flex;
+  /* flex-direction: column; */
   flex-wrap: wrap;
   list-style: none;
   margin-block-end: 0;
@@ -106,6 +113,7 @@ ul {
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   padding-inline-start: 40px;
+  /* flex-direction: column;  */
 }
 a:-webkit-any-link {
   color: -webkit-link;
