--- a/week3/project/ecommerce2/src/index.css
+++ b/week3/project/ecommerce2/src/index.css
@@ -5,8 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* min-width: 1000px; */
+
   display: block;
+  flex-wrap: wrap;
 }
 .App {
   margin: 8px;
@@ -20,7 +21,7 @@ code {
 .products--item {
   width: calc(33% - 16px);
   margin: 8px;
-  
+  justify-content: stretch;
 }
 li {
   display: list-item;
@@ -93,7 +94,7 @@ img {
   -webkit-margin-after: 0;
   -webkit-padding-start: 0;
   display: flex;
-  /* flex-direction: column; */
+  
   flex-wrap: wrap;
   list-style: none;
   margin-block-end: 0;
@@ -104,6 +105,7 @@ img {
   display: flex;
   flex-direction: column;
   height: 100%;
+  justify-items: stretch;
 }
 ul {
   display: block;
@@ -113,7 +115,7 @@ ul {
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   padding-inline-start: 40px;
-  /* flex-direction: column;  */
+
 }
 a:-webkit-any-link {
   color: -webkit-link;
@@ -141,7 +143,7 @@ a {
 .product-details--information {
   flex-direction: row-reverse;
  
-  /* text-align: center; */
+ 
   
 }
 .product-details--image {
@@ -151,12 +153,7 @@ a {
   position: relative;
  
 }
-/* p {
-  margin: 0em 0em 20em 0em;
-  display: block;
 
-  
-} */
 h1 {
   font-size: 2em;
   margin: .67em 0;
@@ -209,6 +206,7 @@ font-size: 26px;
 }
 .product-image--container {
   position: relative;
+  justify-items: stretch;
 }
 .product-image--favourite {
   color: black;
